feat(auth): add auth middleware
